--- a/HelloDjango/apps/awards/templates/awards/award.html
+++ b/HelloDjango/apps/awards/templates/awards/award.html
@@ -120,7 +120,6 @@
                     {% endif %}
                     </div>
 
-
                     <!-- Жюри -->
                     <div class="tab-pane fade wow fadeIn" id="profile-ex" role="tabpanel"
                         aria-labelledby="profile-tab-ex">
@@ -252,6 +251,8 @@
                                     <p class="mb-0 text-center">
                                         <a href="#" class="btn btn-outline-danger btn-block" data-toggle="collapse"
                                             data-target="#AwardNewParticipant">Подать заявку на участие
+                                        </a>
+                                        <a href="{% static 'assets/img/presentation.pdf' %}" target="_blank" class="btn peach-gradient btn-block">Презентация для участников
                                         </a>
                                     </p>
                                 </div>
