--- a/HelloDjango/static/assets/css/style.css
+++ b/HelloDjango/static/assets/css/style.css
@@ -69,6 +69,20 @@ footer {
   font-weight: 400;
 }
 
+.forum-hero-left {
+  background: #ed3236;
+}
+
+.carousel-caption {
+  bottom: 20%;
+}
+
+.forum-partisipant-avatar {
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .icon-card {
   border-radius: 10px;
   padding: 30px 15px 15px;
