--- a/HelloDjango/static/assets/css/style.sass
+++ b/HelloDjango/static/assets/css/style.sass
@@ -62,8 +62,17 @@ footer
     color: #fff
     font-weight: 400
 
+.forum-hero-left
+    background: $red-color
+
+.carousel-caption
+    bottom: 20%
+
+.forum-partisipant-avatar
+    height: 300px
+    object-fit: cover
+
 .icon-card
-    
     border-radius: 10px
     padding: 30px 15px 15px
     box-shadow: 5px 5px 15px 0 rgba(0,0,0,0.1)
