Добавлена страница Контакты

--- a/HelloDjango/templates/base.html
+++ b/HelloDjango/templates/base.html
@@ -125,7 +125,7 @@
                     {% endif %}
 
                     <li class="nav-item mr-3">
-                        <a class="nav-link mob-style-nav" href="#"><i class="icofont-google-map"></i> Контакты</a>
+                        <a class="nav-link mob-style-nav" href="{% url 'main_contacts' %}"><i class="icofont-google-map"></i> Контакты</a>
                     </li>
 
                 </ul>
