--- a/HelloDjango/apps/service/templates/service/service_detail.html
+++ b/HelloDjango/apps/service/templates/service/service_detail.html
@@ -5,52 +5,56 @@
 
 {% block content %}
 
-<section id="birds-bg" class="breadcump" style="height: 30vh;">
-    <span style="position: relative; z-index: 1;"></span>
-    <div class="" style="position: relative; z-index: 1;">
-        <div class="content">
-            <h2 class="page-header text-center h2-responsive">
-                {{ service_info.title }}
-            </h2>
-            <nav aria-label="breadcrumb text-center">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'service_list' %}">Услуги</a></li>
-                    <li class="breadcrumb-item active">{{ service.title }}</li>
-                </ol>
-            </nav>
+    <section id="birds-bg" class="breadcump" style="height: 30vh;">
+        <span style="position: relative; z-index: 1;"></span>
+        <div class="" style="position: relative; z-index: 1;">
+            <div class="content">
+                <h2 class="page-header text-center h2-responsive">
+
+                </h2>
+                <nav aria-label="breadcrumb text-center">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'service_list' %}">Услуги</a></li>
+                        <li class="breadcrumb-item active">{{ service.title }}</li>
+                    </ol>
+                </nav>
+            </div>
         </div>
-    </div>
-    <span style="position: relative; z-index: 1;"></span>
-    <canvas class="vanta-canvas">
-    </canvas>
-</section>
+        <span style="position: relative; z-index: 1;"></span>
+        <canvas class="vanta-canvas">
+        </canvas>
+    </section>
 
     <section class="content-start mb-5">
-    <div class="container">
-        <div class="content-block mt-5">
-            <h2 class="text-center h2-responsive">{{ service.title }}</h2>
-            <div class="p-2 mt-5">
-                {% autoescape off %}
-                    {{ service.description }}
-                 {% endautoescape %}
+        <div class="container">
+            <div class="content-block mt-5">
+                <h2 class="text-center h2-responsive">{{ service.title }}</h2>
+                <div class="p-2 mt-5">
+                    {% if service.image %}
+                        <img src="{{ service.image.url }}" alt="" style="max-width: 50%; float: right;">
+                    {% endif %}
+                    {% autoescape off %}
+                        {{ service.description }}
+                    {% endautoescape %}
 
-                <hr>
+                    <hr>
 
-                {% for i in service.sub_service.all %}
-                    <div class="z-depth-0 mt-2">
-                        <div class="">
-                            <a href="{{ i.get_absolute_url }}" class="btn btn-block text-center font-weight-bold waves-effect waves-light btn-outline-danger" >
-                                {{ i.title }}
-                            </a>
+                    {% for i in service.sub_service.all %}
+                        <div class="z-depth-0 mt-2">
+                            <div class="">
+                                <a href="{{ i.get_absolute_url }}"
+                                   class="btn btn-block text-center font-weight-bold waves-effect waves-light btn-outline-danger">
+                                    {{ i.title }}
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                {% endfor %}
-             </div>
-{#            Услуги#}
+                    {% endfor %}
+                </div>
+                {#            Услуги#}
 
-        </div><!-- Container -->
-    </div>
-</section>
+            </div><!-- Container -->
+        </div>
+    </section>
 
 {% endblock %}
